# movie-rag

./: .gitignore  README.md
.github/workflows/: ci-cd.yml  ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py  posters.py
backend/app/models/: __init__.py  chunk.py  credits.py  genre.py  movie.py  person.py  schema_c.py  source_text.py
backend/app/movies/: service.py
backend/app/routers/: movies.py  search.py
backend/app/schemas/: movies.py  poster.py  search.py
backend/app/search/: embedder.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 2f02bb35ec9d_create_movies_table.py  55e4c873240e_create_schema_c_tables_and_movies_.py  5a86fe44f188_add_credit_unique_constraints.py  5de4916cc3ad_add_movie_enrichment_columns.py  61d6b7fba916_widen_movie_cast_character_to_text.py  735aac05234f_create_relational_schema.py  be7b8029410f_add_poster_columns.py  e659f1b857ca_create_chunks_table_with_pgvector.py
backend/tests/: conftest.py  test_health.py  test_migrations.py  test_movies_endpoint.py  test_movies_service.py  test_search_endpoint.py  test_search_service.py
docs/: roadmap.md
etl/: 01_build_movie_list.py  02_fetch_movie_details.py  03_fetch_credits.py  04_fetch_plots.py  04b_load_overview.py  05_embed.py  06_generate_schema_c.py  07_backfill_posters.py  pyproject.toml
etl/lib/: blurhash_util.py  build_list.py  chunks.py  config.py  credits.py  db.py  embeddings.py  enrich.py  gemini.py  overview.py  plots.py  r2_client.py  retry.py  schema_c.py  tmdb_client.py  wikipedia_client.py
etl/tests/: conftest.py  test_blurhash.py  test_build_list.py  test_chunks.py  test_credits.py  test_db.py  test_embeddings.py  test_enrich.py  test_gemini.py  test_overview.py  test_plots.py  test_schema_c.py  test_tmdb_client.py  test_wikipedia_client.py
frontend/: biome.json  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.ts
frontend/src/components/: MovieRagLogo.tsx  Poster.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  movie-detail.tsx  search.tsx
infra/: .env.template  docker-compose.override.yml  docker-compose.yml
infra/deploy/: deploy-launcher.sh  deploy.sh
