[project]
name = "movie-rag-etl"
version = "0.1.0"
description = "ETL pipeline for movie-rag (TMDb + Wikipedia ingestion)"
requires-python = ">=3.12"
dependencies = [
    "movie-rag-backend",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "aiolimiter>=1.2.0",
    "beautifulsoup4>=4.13.0",
    "sentence-transformers>=4.0.0",
    "google-genai>=1.0.0",
    "boto3>=1.35.0",
    "blurhash-python>=1.2.0",
    "pillow>=11.0.0",
]

[tool.uv.sources]
movie-rag-backend = { path = "../backend", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "types-beautifulsoup4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "N",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["lib", "tests"]

[[tool.mypy.overrides]]
module = ["boto3", "blurhash"]
ignore_missing_imports = true
